add docker compose

--- a/src/OrdersOrchestrator/appsettings.json
+++ b/src/OrdersOrchestrator/appsettings.json
@@ -17,20 +17,20 @@
       "Error": "ERROR"
     },
     "ClientConfig": {
-      "BootstrapServers": "pkc-6ojv2.us-west4.gcp.confluent.cloud:9092",
+      "BootstrapServers": "localhost:9092",
       "SaslMechanism": "PLAIN",
-      "SecurityProtocol": "SASLSSL",
+      "SecurityProtocol": "PLAINTEXT",
       "SaslUsername": "",
       "SaslPassword": ""
     },
     "MongoDb": {
-      "ConnectionString": "",
+      "ConnectionString": "mongodb://root:example@localhost:27017/sagas-db?authSource=admin",
       "DatabaseName": "sagas-db",
       "CollectionName": "instances"
     },
     "RedisDb": {
       "KeyPrefix": "sagas",
-      "Endpoint": "redis-15237.c124.us-central1-1.gce.cloud.redislabs.com:15237",
+      "Endpoint": "localhost:6379",
       "Password": ""
     }
   }
