--- a/src/OrdersManagementApi/appsettings.json
+++ b/src/OrdersManagementApi/appsettings.json
@@ -10,9 +10,9 @@
       "OrderManagementSystemRequest": "ORDER_MANAGEMENT_SYSTEM.REQUEST"
     },
     "ClientConfig": {
-      "BootstrapServers": "pkc-6ojv2.us-west4.gcp.confluent.cloud:9092",
+      "BootstrapServers": "localhost:9092",
       "SaslMechanism": "PLAIN",
-      "SecurityProtocol": "SASLSSL",
+      "SecurityProtocol": "PLAINTEXT",
       "SaslUsername": "",
       "SaslPassword": ""
     }
