--- a/src/TaxesCalculationEngine/appsettings.json
+++ b/src/TaxesCalculationEngine/appsettings.json
@@ -12,9 +12,9 @@
       "TaxesCalculationEngineResponse": "TAXES_CALCULATION_ENGINE.RESPONSE"
     },
     "ClientConfig": {
-      "BootstrapServers": "pkc-6ojv2.us-west4.gcp.confluent.cloud:9092",
+      "BootstrapServers": "localhost:9092",
       "SaslMechanism": "PLAIN",
-      "SecurityProtocol": "SASLSSL",
+      "SecurityProtocol": "PLAINTEXT",
       "SaslUsername": "",
       "SaslPassword": ""
     }
